# nostalgia-server

./: .gitignore  Cargo.toml
crates/nostalgia_server/: Cargo.toml
crates/nostalgia_server/src/: connection.rs  main.rs
crates/nostalgia_server_core/: Cargo.toml
crates/nostalgia_server_entity/: Cargo.toml
crates/nostalgia_server_entity/src/: id.rs  lib.rs
crates/nostalgia_server_entity/src/mob/: chicken.rs  mod.rs
crates/nostalgia_server_macros/: Cargo.toml
crates/nostalgia_server_macros/src/: lib.rs
crates/nostalgia_server_nbt/: Cargo.toml
crates/nostalgia_server_nbt/src/: lib.rs
crates/nostalgia_server_network/: Cargo.toml
crates/nostalgia_server_network/src/: fragment.rs  lib.rs  listener.rs  peer.rs  protocol.rs  reliability.rs
crates/nostalgia_server_protocol/: Cargo.toml
crates/nostalgia_server_protocol/src/: lib.rs  reader.rs  writer.rs
crates/nostalgia_server_protocol/src/interop/: mod.rs  requested_chunk.rs  synced_entity_data.rs
crates/nostalgia_server_protocol/src/packets/: add_entity.rs  add_item_entity.rs  add_mob.rs  add_painting.rs  add_player.rs  adventure_settings.rs  animate.rs  chat.rs  container_ack.rs  container_close.rs  container_open.rs  container_set_content.rs  container_set_data.rs  container_set_slot.rs  drop_item.rs  entity_event.rs  explode.rs  hurt_armor.rs  interact.rs  level_event.rs  login_request.rs  login_response.rs  message.rs  mod.rs  move_entity.rs  move_entity_pos_rot.rs  move_player.rs  place_block.rs  player_action.rs  player_armor_equipment.rs  player_equipment.rs  ready.rs  remove_block.rs  remove_entity.rs  remove_player.rs  request_chunk.rs  respawn.rs  rotate_head.rs  send_chunk_data.rs  send_inventory.rs  (+12 more)
crates/nostalgia_server_renderer/: Cargo.toml
crates/nostalgia_server_renderer/src/: main.rs  mesher.rs  uv.rs
crates/nostalgia_server_types/: Cargo.toml
crates/nostalgia_server_types/src/: iteminstance.rs  lib.rs  vector2.rs  vector3.rs
crates/nostalgia_server_world/: Cargo.toml
crates/nostalgia_server_world/src/: block.rs  chunk.rs  lib.rs
scripts/: generate-protocol.py  sony.py
